--- a/src/index.css
+++ b/src/index.css
@@ -475,6 +475,7 @@ label{
 .form-control {
   font-size: 16px;
   font-weight: 400;
+  text-transform: capitalize;
   width: 100%;
   height: 48px;
   color: rgb(72, 72, 72);
